fixed description overlap on resize

--- a/style.css
+++ b/style.css
@@ -32,8 +32,12 @@ body {
  }
 
 .row div {
-   position: relative;
+   display: flex;
    border: 2px solid red;
+   margin: 10px;
+   position: relative;
+   justify-content: center;
+   flex-direction: column;
  }
 
 img {
@@ -47,8 +51,8 @@ img:hover + p {
 p {
    font-family: "Century Gothic";
    text-align: center;
-   position: absolute;
    background: rgba(1,1,1,0.7);
+  position: absolute;
    color: #fff;
    padding: 8px;
    letter-spacing: 2px;
